k8s/chapter5/5.13/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  selector:
    app: kubia-nodeport
  ports:
    - port: 80
      targetPort: 8080
