k8s/chapter5/5.13/ingress.yml
# 인그레스 설치
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: kubia.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
